--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       </div>
       <div>
        <span id="head">Graphic Designer</span>
-       <p>2012-2015</p>
+       <p>2017-2022</p>
       </div>
       <div>
        <h4 id="ent">Enterprise</h4>
-       <p >Experience is the knowledge or mastery of an event or subject gained through involvement in or exposure to it. Terms in philosophy such as "empirical knowledge" or "a posteriori knowledge" are used to refer to knowledge based on experience.</p>
+       <p >Learning various algorithm like line drawing algo,bresenham algo etc</p>
       </div>
      </div> <!-- end section 1 -->
      <div id="exp1">
@@ -68,11 +68,11 @@
       </div>
       <div>
        <span id="head">App Designer</span>
-       <p>2012-2015</p>
+       <p>2017-2022</p>
       </div>
       <div>
        <h4 id="ent">Enterprise</h4>
-       <p >Experience is the knowledge or mastery of an event or subject gained through involvement in or exposure to it. Terms in philosophy such as "empirical knowledge" or "a posteriori knowledge" are used to refer to knowledge based on experience.</p>
+       <p Learning xml,java....develop various types of app</p>
       </div>
      </div> <!-- end section 1 -->
     </div>
@@ -113,7 +113,7 @@
       </div>
       <div>
        <h4 id="ent">Enterprise</h4>
-       <p >Experience is the knowledge or mastery of an event or subject gained through involvement in or exposure to it. Terms in philosophy such as "empirical knowledge" or "a posteriori knowledge" are used to refer to knowledge based on experience.</p>
+       <p >Department of ICT give me technological knowledge</p>
       </div>
      </div> <!-- end section 1 -->
     </div>
