--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div>
        <h4 id="ent">Enterprise</h4>
-       <p Learning xml,java....develop various types of app</p>
+       <p>Learning xml,java....develop various types of app</p>
       </div>
      </div> <!-- end section 1 -->
     </div>
