--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
        <h4 id="ent">Enterprise</h4>
        <p>Learning xml,java....develop various types of app</p>
       </div>
-     </div> <!-- end section 1 -->
+     </div> <!-- end Section 1 -->
     </div>
    </div>
   </div> <!-- end row 1 -->
